deployment-capsule.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-capsule
spec:
  replicas: 3
  selector:
    matchLabels:
      app: capsule
  template:
    metadata:
      labels:
        app: capsule
    spec:
      containers:
      - name: capsule1
        image: bharathsunny3006/praticse:latest
        ports:
        - containerPort: 3015
