service-capsule.yaml
apiVersion: v1
kind: Service
metadata:
  name: capsulesvc
spec:
  selector:
    app: capsule
  type: ClusterIP  
  ports:
  - port: 47688
    targetPort: 3015
