service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  selector:
    app: mongo
  type: ClusterIP  
  ports:
  - port: 27017
    targetPort: 27017
