ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress1
  annotations:


spec:
  rules:
  - host: 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mongo
            port: 
              number: <Port>
